--- a/assets/image/icon/html_code.html
+++ b/assets/image/icon/html_code.html
@@ -1,14 +1,14 @@
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/assets/icon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="194x194" href="/assets/icon/favicon-194x194.png">
-<link rel="icon" type="image/png" sizes="192x192" href="/assets/icon/android-chrome-192x192.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/assets/icon/favicon-16x16.png">
-<link rel="manifest" href="/assets/icon/site.webmanifest">
-<link rel="mask-icon" href="/assets/icon/safari-pinned-tab.svg" color="#336699">
-<link rel="shortcut icon" href="/assets/icon/favicon.ico">
-<meta name="apple-mobile-web-app-title" content="RoIPMARS">
-<meta name="application-name" content="RoIPMARS">
-<meta name="msapplication-TileColor" content="#2d89ef">
-<meta name="msapplication-TileImage" content="/assets/icon/mstile-144x144.png">
-<meta name="msapplication-config" content="/assets/icon/browserconfig.xml">
-<meta name="theme-color" content="#ffffff">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/image/icon/apple-touch-icon.png" />
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/image/icon/favicon-32x32.png" />
+<link rel="icon" type="image/png" sizes="194x194" href="/assets/image/icon/favicon-194x194.png" />
+<link rel="icon" type="image/png" sizes="192x192" href="/assets/image/icon/android-chrome-192x192.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/image/icon/favicon-16x16.png" />
+<link rel="manifest" href="/assets/image/icon/site.webmanifest" />
+<link rel="mask-icon" href="/assets/image/icon/safari-pinned-tab.svg" color="#336699" />
+<link rel="shortcut icon" href="/assets/image/icon/favicon.ico" />
+<meta name="apple-mobile-web-app-title" content="RoIPMARS" />
+<meta name="application-name" content="RoIPMARS" />
+<meta name="msapplication-TileColor" content="#2d89ef" />
+<meta name="msapplication-TileImage" content="/assets/image/icon/mstile-144x144.png" />
+<meta name="msapplication-config" content="/assets/image/icon/browserconfig.xml" />
+<meta name="theme-color" content="#ffffff" />
